--- a/style.css
+++ b/style.css
@@ -66,3 +66,28 @@ footer {
   height: 50px;
   background-color: #aaaaaa;
 }
+
+@media screen and (max-width: 768px) {
+  main {
+    width: 100%;
+    display: block;
+  }
+
+  .box {
+    width: 90%;
+    margin: 0 auto;
+  }
+  .box:nth-child(1) {
+    margin-bottom: 20px;
+  }
+
+  .box:nth-child(2) {
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+
+  .box:last-child {
+    margin-right: auto;
+    margin-bottom: 50px;
+  }
+}
